fixtures/typescript/architecture/should_fail/adapter_choice.ts
import { SqlUserRepository } from "../infra/sql-user-repository"

export function buildService() {
  return new SqlUserRepository()
}
